@@ -50,7 +50,7 @@ public class ReviewAdditionalApplicationService {
             } else if (applicationsBundlesToBeReviewed.size() == 1) {
                 resultMap.put(ONLY_ONE_APPLICATION, YES);
                 resultMap.putAll(initReviewFieldsForSelectedBundle(applicationsBundlesToBeReviewed
-                    .get(0).getValue()));
+                    .getFirst().getValue()));
             }
         }
 
